Add Android SDK Level 24 JDK APIs Proto file.
- API_LEVEL=24
- ANDROID_JAR=$HOME/Android/Sdk/platforms/android-24/android.jar

PiperOrigin-RevId: 476516415